baml_language/crates/baml_tests/snapshots/compiles/namespaces_root_fallback/baml_tests__compiles__namespaces_root_fallback__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Config {
  key: string
}
function user.from_json(j: baml.json.json) -> user.Config  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.llm.Response {
  text: string
}
function user.llm.UseConfig(cfg: root.Config) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: cfg.key }
}
function user.llm.from_json(j: baml.json.json) -> user.llm.Response  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.llm.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
