baml_language/crates/baml_tests/snapshots/compiles/namespaces_root_fallback/baml_tests__compiles__namespaces_root_fallback__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 21497
---
=== PPIR ===
class user.Config {
  key: string
}
class user.Config$stream {
  key: string | null
}
class user.llm.Response {
  text: string
}
class user.llm.Response$stream {
  text: string | null
}
function user.llm.UseConfig(cfg: root.Config) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: cfg.key }
}
