baml_language/crates/baml_tests/snapshots/compiles/namespaces_root_fallback/baml_tests__compiles__namespaces_root_fallback__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 12875
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
