baml_language/crates/baml_tests/snapshots/compiles/namespaces_root_fallback/baml_tests__compiles__namespaces_root_fallback__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.llm.UseConfig(cfg: Config) -> llm.Response {
    alloc_instance user.llm.Response
    load_var cfg
    load_field .key
    init_field .text
    return
}
